bug: add dot MenuFilter, add page AccountSignIn , fix spacing MenuFilter

--- a/src/components/common/MenuNavigation/MenuNavigation.module.scss
+++ b/src/components/common/MenuNavigation/MenuNavigation.module.scss
@@ -1,5 +1,6 @@
 @import "../../../styles/utilities";
 .menuNavigationWrapper{
+    @apply hidden;
     .menuNavigationHeading{
         @screen md {
             @apply sub-headline font-bold ;
